[package]
name = "orx-concurrent-queue"
version = "1.0.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "A high performance and convenient thread safe queue that can concurrently grow and shrink with push, extend, pop and pull capabilities."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-concurrent-queue/"
keywords = ["concurrency", "queue", "data-structures", "atomic", "lock-free"]
categories = ["data-structures", "concurrency", "rust-patterns", "no-std"]

[dependencies]
orx-pinned-vec = { git = "https://github.com/orxfun/orx-pinned-vec", branch = "concurrent-queue-support" }
orx-split-vec = { git = "https://github.com/orxfun/orx-split-vec", branch = "support-for-concurrent-queue" }
orx-fixed-vec = { git = "https://github.com/orxfun/orx-fixed-vec", branch = "support-for-concurrent-queue" }
orx-pseudo-default = { version = "2.1.0", default-features = false, registry = "artifactory" }

[dev-dependencies]
criterion = { version = "0.7.0", default-features = false }
orx-concurrent-bag = { version = "3.1.0" }
test-case = { version = "3.3.1" }
