[package]
name = "orx-concurrent-queue"
version = "1.1.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "A high performance and convenient thread safe queue that can concurrently grow and shrink with push, extend, pop and pull capabilities."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-concurrent-queue/"
keywords = ["concurrency", "queue", "data-structures", "atomic", "lock-free"]
categories = ["data-structures", "concurrency", "rust-patterns", "no-std"]

[dependencies]
orx-pinned-vec = { version = "3.20.0", default-features = false }
orx-split-vec = { version = "3.21.0", default-features = false }
orx-fixed-vec = { version = "3.21.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.7.0", default-features = false }
orx-concurrent-bag = { version = "3.1.0" }
rand_chacha = { version = "0.9.0" }
rand = { version = "0.9.2" }
test-case = { version = "3.3.1" }
